--- a/wp-content/themes/gusto/css/customizer.css
+++ b/wp-content/themes/gusto/css/customizer.css
@@ -60,12 +60,12 @@ This file contains styling for
 /* - - - - - Switch Button - - - - - */
 .switch-pad {
   position: absolute;
-  left: 2px;
-  top: 2px;
+  left: 3px;
+  top: 3px;
   display: block;
   width: 50%;
-  height: -webkit-calc(100% - 6px);
-  height: calc(100% - 6px);
+  height: -webkit-calc(100% - 8px);
+  height: calc(100% - 8px);
   background: #e9e9e9;
   border: 1px solid #149465;
   border-bottom-color: #116446;
@@ -77,13 +77,14 @@ This file contains styling for
 }
 
 .active + .switch-pad {
-  left: -webkit-calc(50% - 4px);
-  left: calc(50% - 4px);
+  left: -webkit-calc(50% - 6px);
+  left: calc(50% - 6px);
 }
 
 .radio-switch {
   background: #19bb80;
   border-radius: 3px;
+  box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.25);
 }
 
 .radio-switch > * {
@@ -102,17 +103,22 @@ This file contains styling for
 .radio-switch a label {
   color: #fff;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
-}
-
-.radio-switch a label {
   width: 100%;
   -webkit-transition: all 0.3s ease;
           transition: all 0.3s ease;
+  padding-right: 4px;
+  box-sizing: border-box;
+  font-size: 14px;
 }
 
 .radio-switch a input:checked + label {
   color: #333;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.9) !important;
+}
+
+.radio-switch li:first-child label {
+  padding-right: 0;
+  padding-left: 4px;
 }
 
 /*--------------------------------------------------------------
