--- a/wp-content/themes/gusto/sass/3t/customizer.scss
+++ b/wp-content/themes/gusto/sass/3t/customizer.scss
@@ -26,6 +26,7 @@ $light_top_shadow	: inset 0 1px 0 rgba(255,255,255,0.8);
 $dark_bot_shadow	: 0 1px 0 rgba(0,0,0,0.3);
 $dark_text_shadow	: 0 1px 0 rgba(0,0,0,0.2);
 $light_text_shadow	: 0 1px 0 rgba(255,255,255,0.9);
+$inset_dark_shadow	: inset 0 1px 4px rgba(0,0,0,0.25);
 $z1					: 100; // z-index level
 $z2					: 200;
 $z3					: 300;
@@ -76,11 +77,11 @@ $transition			: all 0.3s ease;
 /* - - - - - Switch Button - - - - - */
 .switch-pad {
 	position: absolute;
-	left: 2px;
-	top: 2px;
+	left: 3px;
+	top: 3px;
 	display: block;
 	width: 50%;
-	height: calc(100% - 6px);
+	height: calc(100% - 8px);
 	background: #e9e9e9;
 	border: 1px solid $active_bot_shadow;
 	border-bottom-color: $active_darker_color;
@@ -90,11 +91,12 @@ $transition			: all 0.3s ease;
 	transition: $transition;
 }
 .active + .switch-pad {
-	left: calc(50% - 4px);
+	left: calc(50% - 6px);
 }
 .radio-switch {
 	background: $active_color;
 	border-radius: 3px;
+	box-shadow: $inset_dark_shadow;
 	> * {
 		margin: 0 !important;
 		width: 70px;
@@ -108,14 +110,21 @@ $transition			: all 0.3s ease;
 		label {
 			color: $white;
 			text-shadow: $dark_text_shadow;
-		}
-		label {
 			width: 100%;
 			transition: $transition;
+			padding-right: 4px;
+			box-sizing: border-box;
+			font-size: 14px;
 		}
 		input:checked + label {
 			color: #333;
 			text-shadow: $light_text_shadow !important;
+		}
+	}
+	li:first-child {
+		label {
+			padding-right: 0;
+			padding-left: 4px;
 		}
 	}
 }
