Styling for Customizer

--- a/wp-content/themes/gusto/style.css
+++ b/wp-content/themes/gusto/style.css
@@ -265,6 +265,9 @@ th {
 # 3T VARS & MIXINS
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
+# GENERAL
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
 # Typography
 --------------------------------------------------------------*/
 body,
