--- a/wp-content/themes/gusto/css/customizer.css
+++ b/wp-content/themes/gusto/css/customizer.css
@@ -10,10 +10,13 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: gusto
 Tags:
 
-This file contains styling for 
+This file contains styling for 3T Theme Customizer Panel
 */
 /*--------------------------------------------------------------
 # 3T VARS & MIXINS
+--------------------------------------------------------------*/
+/*--------------------------------------------------------------
+# GENERAL
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
 # RESET WP DEFAULT STYLE
@@ -29,6 +32,12 @@ This file contains styling for
   z-index: 200;
 }
 
+.wp-core-ui .button.change-theme,
+.wp-core-ui .button.customize-theme {
+  background: #19bb80;
+  color: #fff;
+}
+
 .wp-core-ui .button,
 .wp-core-ui .button:focus,
 .wp-core-ui .button.active:focus,
@@ -40,8 +49,31 @@ This file contains styling for
   outline: none;
 }
 
-.current-panel .accordion-sub-container.control-panel-content {
-  margin-left: 0;
+#customize-info .accordion-section-title:focus,
+#customize-info .accordion-section-title:hover,
+#customize-info.open .accordion-section-title,
+#customize-theme-controls .control-section .accordion-section-title:focus,
+#customize-theme-controls .control-section .accordion-section-title:hover,
+#customize-theme-controls .control-section.open .accordion-section-title,
+#customize-theme-controls .control-section:hover > .accordion-section-title {
+  -webkit-transition: all 0.3s ease;
+          transition: all 0.3s ease;
+}
+
+.actions, .upload-ui {
+  margin-bottom: 0 !important;
+}
+
+.actions .button, .upload-ui .button {
+  border: 1px solid #ddd;
+}
+
+.control-panel-content, .customize-control-title {
+  margin: 0;
+}
+
+.customize-control-title {
+  font-size: 12px;
 }
 
 /*--------------------------------------------------------------
@@ -57,7 +89,19 @@ This file contains styling for
   -webkit-box-sizing: content-box;
 }
 
-/* - - - - - Switch Button - - - - - */
+.customize-control {
+  margin-bottom: 20px;
+}
+
+.ttt-separator-control {
+  margin: 10px 0;
+}
+
+.button.warning {
+  background: #f08a24;
+}
+
+/* - - - - - Switches - - - - - */
 .switch-pad {
   position: absolute;
   left: 3px;
@@ -84,12 +128,15 @@ This file contains styling for
 .radio-switch {
   background: #19bb80;
   border-radius: 3px;
-  box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.4);
+  -webkit-transition: all 0.3s ease;
+          transition: all 0.3s ease;
+  position: relative;
 }
 
 .radio-switch > * {
   margin: 0 !important;
-  width: 70px;
+  width: 64px;
   text-align: center;
 }
 
@@ -103,12 +150,32 @@ This file contains styling for
 .radio-switch a label {
   color: #fff;
   text-shadow: 0 1px 0 rgba(0, 0, 0, 0.2);
-  width: 100%;
-  -webkit-transition: all 0.3s ease;
-          transition: all 0.3s ease;
-  padding-right: 4px;
+  width: 128px;
+  height: 100%;
   box-sizing: border-box;
-  font-size: 14px;
+  font-size: 10px;
+  letter-spacing: 0.5px;
+  position: absolute !important;
+  right: 0;
+  top: 0;
+  text-align: right;
+}
+
+.radio-switch a label:before {
+  content: attr(data-content);
+  display: block;
+  position: absolute;
+  height: 100%;
+  width: -webkit-calc(50% + 6px);
+  width: calc(50% + 6px);
+  right: 0;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+
+.radio-switch a label.lower-z {
+  z-index: 150;
 }
 
 .radio-switch a input:checked + label {
@@ -116,9 +183,144 @@ This file contains styling for
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.9) !important;
 }
 
+.radio-switch a input:checked + label:before {
+  color: #264443;
+}
+
 .radio-switch li:first-child label {
-  padding-right: 0;
-  padding-left: 4px;
+  right: auto;
+  left: 0;
+  text-align: left;
+}
+
+.radio-switch li:first-child label:before {
+  right: auto;
+  left: 0;
+}
+
+.switch.tiny {
+  height: 24px;
+  position: relative;
+}
+
+.switch.tiny label {
+  height: 1.3rem;
+}
+
+.switch.tiny label:after {
+  height: -webkit-calc(1rem + 8px);
+  height: calc(1rem + 8px);
+  width: -webkit-calc(1rem + 8px);
+  width: calc(1rem + 8px);
+  left: -2px;
+  top: -2px;
+  border: 1px solid #ddd;
+  background: #e9e9e9;
+  border: 1px solid #777;
+  border-bottom-color: #555;
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.8), 0 1px 0 rgba(0, 0, 0, 0.3);
+  z-index: 500;
+  -webkit-transition: all 0.3s ease;
+          transition: all 0.3s ease;
+}
+
+.switch.tiny input:checked + label:after {
+  left: 1.52rem;
+}
+
+.switch input:checked + label {
+  background: #19bb80;
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.4);
+  -webkit-transition: all 0.3s ease;
+          transition: all 0.3s ease;
+}
+
+.switch label {
+  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.4);
+}
+
+.customize-control-ttt-radio, .customize-control-ttt-switch {
+  position: relative;
+}
+
+.customize-control-ttt-radio .customize-control-title, .customize-control-ttt-switch .customize-control-title {
+  width: 50%;
+  float: left;
+}
+
+.customize-control-ttt-radio .customize-control-title + .switch.tiny, .customize-control-ttt-switch .customize-control-title + .switch.tiny {
+  position: absolute;
+  right: 0;
+  top: 50%;
+  -webkit-transform: translateY(-12px);
+      -ms-transform: translateY(-12px);
+          transform: translateY(-12px);
+}
+
+.customize-control-ttt-radio .customize-control-title + .radio-switch, .customize-control-ttt-switch .customize-control-title + .radio-switch {
+  position: absolute;
+  left: auto;
+  right: 0;
+  top: 50%;
+  -webkit-transform: translateY(-14px);
+      -ms-transform: translateY(-14px);
+          transform: translateY(-14px);
+}
+
+/* - - - - - Color Picker - - - - - */
+.customize-control-color {
+  margin-bottom: 10px;
+  position: relative;
+}
+
+.customize-control-color.picker-open {
+  margin-bottom: 30px;
+}
+
+.customize-control-color + .customize-control-ttt-separator {
+  margin-top: -10px;
+}
+
+.customize-control-color .customize-control-content {
+  margin-bottom: -24px;
+}
+
+.customize-control-color .wp-picker-container {
+  width: 100%;
+  position: relative;
+  top: -24px;
+  left: 0;
+}
+
+.customize-control-color .wp-picker-container .wp-color-result {
+  float: right;
+  margin: 0;
+}
+
+.customize-control-color .wp-picker-container .wp-color-result + .wp-picker-input-wrap {
+  display: inline-block;
+  width: 100%;
+}
+
+.customize-control-color .wp-picker-container .wp-color-result.wp-picker-open + .wp-picker-input-wrap {
+  padding-top: 20px;
+}
+
+.customize-control-color .wp-picker-container .wp-color-result:after {
+  width: 84px;
+}
+
+.customize-control-color .wp-picker-container input[type=text].wp-color-picker {
+  width: 75%;
+  height: 1.6rem;
+}
+
+.customize-control-color .wp-picker-container .wp-picker-clear {
+  width: -webkit-calc(25% - 6px);
+  width: calc(25% - 6px);
+  height: 1.6rem !important;
+  line-height: 1.6rem !important;
+  border: 1px solid #ddd;
 }
 
 /*--------------------------------------------------------------
