--- a/wp-content/themes/gusto/sass/3t/_vars_mixins.scss
+++ b/wp-content/themes/gusto/sass/3t/_vars_mixins.scss
@@ -1,6 +1,52 @@
 /*--------------------------------------------------------------
 # GENERAL
 --------------------------------------------------------------*/
+@mixin radio_input {
+	width: 16px;
+	height: 16px;
+	border: 3px solid #ddd;
+	transform: scale(1);
+	box-shadow: none;
+	transition: $transition;
+	&:before {
+		@include pseudo_basic;
+		@include absolute_center;
+		margin: 0;
+		width: 8px;
+		height: 8px;
+	}
+	&:hover {
+		border-color: #ccc;
+	}
+	&:after {
+		@include pseudo_basic;
+		@include absolute_center;
+		opacity: 0;
+		width: 6px;
+		height: 6px;
+		border-radius: 100%;
+		background-color: #ccc;
+		transition: $transition;
+	}
+	&:hover:after {
+		opacity: 1;
+	}
+	&:focus {
+		box-shadow: none;
+	}
+	&:checked {
+		transform: scale(1.2);
+		background-color: $active_color;
+		border-color: $active-color;
+		&:before {
+			background-color: $active_color_very_light;
+		}
+		&:after {
+			display: none;
+		}
+	}
+}
+
 @mixin absolute_vertical_center {
 	top: 50%;
 	transform: translateY(-50%);
@@ -15,6 +61,15 @@
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%,-50%);
+}
+
+@mixin absolute_full {
+	position: absolute;
+	left: 0;
+	top: 0;
+	display: block;
+	width: 100%;
+	height: 100%;
 }
 
 @mixin pseudo_basic {
