--- a/wp-content/themes/gusto/sass/3t/customizer.scss
+++ b/wp-content/themes/gusto/sass/3t/customizer.scss
@@ -19,14 +19,19 @@ This file contains styling for 3T Theme Customizer Panel
 @import "vars_mixins";
 
 $white						: #fff;
+$light_blue_bg				: #f7f9fb;
+$light_blue_border			: 1px solid #dce3e8;
+$light_blue_border_color	: #dce3e8;
 $active_color				: #19bb80;
-$active_darker_color		: #116446;
+$active_color_very_light	: #d6f0e6;
+$active_darker_color		: #20a776;
+$active_darkest_color		: #116446;
 $active_dark_text			: #264443;
 $warning_color				: #f08a24;
 $active_bot_shadow			: #149465;
 $horizontal_box_shadow		: 2px 1px 0 rgba(0,0,0,0.15);
 $light_top_shadow			: inset 0 1px 0 rgba(255,255,255,0.8);
-$dark_bot_shadow			: 0 1px 0 rgba(0,0,0,0.3);
+$dark_bot_shadow			: 0 1px 0 rgba(0,0,0,0.2);
 $dark_text_shadow			: 0 1px 0 rgba(0,0,0,0.2);
 $light_text_shadow			: 0 1px 0 rgba(255,255,255,0.9);
 $inset_dark_shadow			: inset 0 1px 3px rgba(0,0,0,0.4);
@@ -115,26 +120,23 @@ $color_transition			: color 0.3s ease;
 /* - - - - - Switches - - - - - */
 .switch-pad {
 	position: absolute;
-	left: 3px;
-	top: 3px;
+	left: 4px;
+	top: 4px;
 	display: block;
 	width: 50%;
 	height: calc(100% - 8px);
-	background: #e9e9e9;
-	border: 1px solid $active_bot_shadow;
-	border-bottom-color: $active_darker_color;
-	border-radius: 3px !important;
-	box-shadow: $light_top_shadow, $dark_bot_shadow;
+	background: #f5f5f5;
+	border-bottom: 1px solid $active_darker_color;
+	border-radius: 2px !important;
 	z-index: $z1;
 	transition: $transition;
 }
 .active + .switch-pad {
-	left: calc(50% - 6px);
+	left: calc(50% - 4px);
 }
 .radio-switch {
 	background: $active_color;
 	border-radius: 3px;
-	box-shadow: $inset_dark_shadow;
 	transition: $transition;
 	position: relative;
 	&:hover {
@@ -202,17 +204,24 @@ $color_transition			: color 0.3s ease;
 		height: 24px;
 		position: relative;
 		label {
-			height: 1.3rem;
+			width: 4rem;
+			height: 1.5rem;
+			background-color: #ccc;
 			&:after {
-				height: calc(1rem + 8px);
-				width: calc(1rem + 8px);
-				left: -2px;
-				top: -2px;
-				border: 1px solid #ddd;
-				background: #e9e9e9;
-				border: 1px solid #777;
-				border-bottom-color: #555;
-				box-shadow: $light_top_shadow, $dark_bot_shadow;
+				content: 'Off';
+				text-indent: 1.6rem;
+				color: #fff;
+				font-size: 0.7rem;
+				line-height: 16px;
+				text-transform: uppercase;
+				height: 1rem;
+				width: 1rem;
+				left: 3px;
+				top: 3px;
+				border: 1px solid $white;
+				background: #fafafa;
+				text-shadow: $dark_text_shadow; 
+				box-shadow: $dark_bot_shadow;
 				z-index: $z5;
 				transition: $transition;
 			}
@@ -220,7 +229,9 @@ $color_transition			: color 0.3s ease;
 		input:checked {
 			+label {
 				&:after {
-					left: 1.52rem;
+					content: 'On';
+					text-indent: -1.7rem;
+					left: 2.6rem;
 				}
 			}
 		}
@@ -228,12 +239,8 @@ $color_transition			: color 0.3s ease;
 	input:checked {
 		+label {
 			background: $active_color;
-			box-shadow: $inset_dark_shadow;
 			transition: $transition;
 		}
-	}
-	label {
-		box-shadow: $inset_dark_shadow;
 	}
 }
 .customize-control-ttt-radio {
@@ -262,12 +269,51 @@ $color_transition			: color 0.3s ease;
 	@extend .customize-control-ttt-radio;
 }
 
+/* - - - - - Radio Group - - - - - */
+.ttt-radio-group {
+	clear: both;
+	position: relative;
+	top: 5px;
+	padding: 0;
+	background-color: $light_blue_bg;
+	border: $light_blue_border;
+	.item {
+		padding: 10px 15px;
+		position: relative;
+		border-bottom: 1px solid $light_blue_border_color;
+		&:last-child {
+			border: none;
+		}
+	}
+	.radio-label {
+		font-size: 0.8rem;
+		line-height: 1.8rem;
+		width: 90%;
+		color: #7b858e;
+	}
+	.radio {
+		width: 10%;
+		input {
+			@include radio_input;
+			margin: 0;
+			position: relative;
+			z-index: $z2;
+			+label {
+				@include absolute_full;
+				z-index: $z1;
+				margin: 0;
+				transition: $transition;
+				&:hover, &.active {
+					background: rgba(0,0,0,0.05);
+				}
+			}
+		}
+	}
+}
+
 /* - - - - - Color Picker - - - - - */
 .customize-control-color {
 	margin-bottom: 10px;
-	&.picker-open {
-		margin-bottom: 30px;
-	}
 	+.customize-control-ttt-separator {
 		margin-top: -10px;
 	}
