Update code base to compatible with theme customizer of WordPress 4.3

--- a/wp-content/themes/gusto/css/customizer.css
+++ b/wp-content/themes/gusto/css/customizer.css
@@ -15,9 +15,14 @@ This file contains styling for 3T Theme Customizer Panel
 /*--------------------------------------------------------------
 # 3T VARS & MIXINS
 --------------------------------------------------------------*/
+
 /*--------------------------------------------------------------
 # GENERAL
 --------------------------------------------------------------*/
+.hidden {
+	display: none !important;
+}
+
 /*--------------------------------------------------------------
 # RESET WP DEFAULT STYLE
 --------------------------------------------------------------*/
