--- a/wp-content/themes/gusto/sass/3t/_vars_mixins.scss
+++ b/wp-content/themes/gusto/sass/3t/_vars_mixins.scss
@@ -1,6 +1,32 @@
 /*--------------------------------------------------------------
 # GENERAL
 --------------------------------------------------------------*/
+$white						: #fff;
+$light_blue_bg				: #f7f9fb;
+$light_blue_border			: 1px solid #dce3e8;
+$light_blue_border_color	: #dce3e8;
+$active_color				: #19bb80;
+$active_color_very_light	: #d6f0e6;
+$active_darker_color		: #20a776;
+$active_darkest_color		: #116446;
+$active_dark_text			: #264443;
+$warning_color				: #f08a24;
+$active_bot_shadow			: #149465;
+$horizontal_box_shadow		: 2px 1px 0 rgba(0,0,0,0.15);
+$light_top_shadow			: inset 0 1px 0 rgba(255,255,255,0.8);
+$dark_bot_shadow			: 0 1px 0 rgba(0,0,0,0.2);
+$dark_text_shadow			: 0 1px 0 rgba(0,0,0,0.2);
+$light_text_shadow			: 0 1px 0 rgba(255,255,255,0.9);
+$inset_dark_shadow			: inset 0 1px 3px rgba(0,0,0,0.4);
+$z1							: 100; // z-index level
+$z2							: 200;
+$z3							: 300;
+$z4							: 400;
+$z5							: 500;
+$z10						: 1000;
+$transition					: all 0.3s ease;
+$color_transition			: color 0.3s ease;
+
 @mixin radio_input {
 	width: 16px;
 	height: 16px;
