#17 - Added Footer theme option panel and all nested options except the Social Links configuration control.

--- a/wp-content/themes/ticktock/css/customize.css
+++ b/wp-content/themes/ticktock/css/customize.css
@@ -16,6 +16,10 @@ li.customize-control .inline.field label + div {
 	height: initial;
 }
 
+i.icon {
+	position: initial;
+}
+
 /* Hide the built-in Header Text Color and Background Color options */
 #customize-control-header_textcolor, #customize-control-background_color {
 	display: none !important;
